syntax = "proto3";

package messages;

message RPC1Request {
  string field_1 = 1;
}

message RPC1Response {
  string field_1 = 1;
}
